[package]
name = "consensus-client"
version = "0.0.0"
description = "A federated chat platform."
authors = ["VioletSpace"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.14", features = ["json"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
ring = "0.17.14"
hex = "0.4.3"
chrono = "0.4.40"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
